kubernetes/yamls/cert-manager-demo/ingress-dino.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dino
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - dino.marinyuk.tk
    - nginx.marinyuk.tk
    - blue.marinyuk.tk
    - green.marinyuk.tk
    secretName: letsencrypt-prod
  rules:
  - host: dino.marinyuk.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dino-main
            port:
              number: 80

  - host: nginx.marinyuk.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-main
            port:
              number: 80

  - host: blue.marinyuk.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-blue
            port:
              number: 80

  - host: green.marinyuk.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-green
            port:
              number: 80
